specs/021-spread-rest-defaults/examples/invalid/missing-required-arg.ts
function f(a: int, b: int, c: int = 0): int {
  return a + b + c;
}
console.log(f(1));
